--- a/package.json
+++ b/package.json
@@ -6,27 +6,11 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "biome lint ./src",
-    "format": "biome format --write ./src",
-    "netlify:dev": "netlify dev"
+    "preview": "vite preview"
   },
   "dependencies": {},
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@eslint/js": "^9.22.0",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-import-resolver-typescript": "^3.8.7",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "netlify-cli": "^17.16.2",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.26.1",
     "vite": "^6.2.2"
   }
 }
